--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-	<link href='http://fonts.googleapis.com/css?family=Oleo+Script+Swash+Caps|Open+Sans:400italic,400,700,300' rel='stylesheet' type='text/css' />
+	<link href="https://fonts.googleapis.com/css?family=Oleo+Script+Swash+Caps|Open+Sans:400italic,400,700,300" rel="stylesheet" type="text/css" />
 	<link rel="stylesheet" type="text/css" href="styles.css?v=2"></link>
 	
 	<script type="text/javascript" src="canvas2image.js"></script>
